--- a/Education-tools.html
+++ b/Education-tools.html
@@ -277,7 +277,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
             <p>○&nbsp;<a href="https://smartybro.com/" rel="nofollow" target="_blank">SmartyBro</a> - <em>Udemy Coupons / Courses</em> </p>
             <p>○&nbsp;<a href="inline.html#udemycoupons" rel="nofollow" target="_blank">Udemy Coupons</a> - <em>Udemy Coupon Sites</em></p>
             <p>○&nbsp;<a href="https://github.com/keethesh/UdemyEnrollEverywhere" rel="nofollow" target="_blank">UdemyEnrollEverywhere</a> - <em>Auto-Grab Udemy Coupons</em></p>
-       >
 <br>
 </div>
 <div id="wb_Text5">
@@ -315,7 +314,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
             <p>○&nbsp;<a href="https://courseforfree.com/" rel="nofollow" target="_blank">CourseForFree</a> - <em>Udemy Courses</em><br /></p>
             <p>○&nbsp;<a href="https://download.howtofree.org/" rel="nofollow" target="_blank">Download Online Tutorials Free</a> - <em>Udemy Courses</em> </p>
             <p>○&nbsp;<a href="https://github.com/udacimak/udacimak" rel="nofollow" target="_blank">Udacimak</a> - <em>Udacity Nanodegree / Course Downloader</em></p>
-       >
 <br>
 </div>
 </div>
@@ -374,7 +372,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
             <p>○&nbsp;<a href="https://github.com/macr0dev/Audiobooks.bundle" rel="nofollow" target="_blank">Audiobooks.bundle</a> - <em>Plex Audiobook Metadata Scraper</em> </p>
             <p>○&nbsp;<a href="https://github.com/chbrown/overdrive" rel="nofollow">OverDrive</a> - <em>OverDrive Audiobook Download Script</em></p>
             <p>○&nbsp;<a href="https://f-droid.org/en/packages/de.ph1b.audiobook/" rel="nofollow" target="_blank">Voice</a> or <a href="https://f-droid.org/en/packages/com.prangesoftwaresolutions.audioanchor/" rel="nofollow" target="_blank">AudioAnchor</a> - <em>Android Audiobook Player</em> </
-       >
 <br>
 </div>
 </div>
@@ -420,7 +417,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://www.goodreads.com/" rel="nofollow" target="_blank">GoodReads</a> - <em>Books / Comics / Manga</em></p>
         <p>○&nbsp;<a href="https://tastedive.com/books" rel="nofollow" target="_blank">TasteDive</a> - <em>Recommendations</em> </p>
         <p>○&nbsp;<a href="https://www.whatshouldireadnext.com/" rel="nofollow" target="_blank">What Should I Read Next?</a>, <a href="https://recommendmeabook.com/" rel="nofollow" target="_blank">RecommendMeABook</a> or <a href="https://www.whichbook.net/" rel="nofollow" target="_blank">WhichBook</a> - <em>Book Recommendations</em></p>
-  >
 <br>
 </div>
 </div>
@@ -475,7 +471,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="http://www.freepdfbook.com/" rel="nofollow" target="_blank">freepdfbook</a> - <em>Books</em> </p>
         <p>○&nbsp;<a href="http://www.pdfsearchengine.info/" rel="nofollow" target="_blank">PDF Search Engine</a> - <em>PDF Search Engine</em> </p>
         <p>○&nbsp;<a href="https://www.google.com/search?q=site%3As3.amazonaws.com+%3CSearch+term%3E+filetype%3Apdf" rel="nofollow" target="_blank">Amazonaws</a> - <em>Amazon PDF Search</em> </p>
-   >
 <br>
 </div>
 </div>
@@ -520,7 +515,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://www.articlereword.com/rewriter/" rel="nofollow" target="_blank">Article Reword</a></p>
         <p>○&nbsp;<a href="https://rephrasely.com/" rel="nofollow" target="_blank">Rephrasely</a></p>
         <p>○&nbsp;<a href="https://www.paraphraser.io/" rel="nofollow" target="_blank">Paraphraser</a></p>
-        <p>○&nbsp;<a href="https://smartarticlerewriter.com/" rel="nofollow" target="_blank">SmartArticleWriter</a></p>  >
+        <p>○&nbsp;<a href="https://smartarticlerewriter.com/" rel="nofollow" target="_blank">SmartArticleWriter</a></p> 
 <br>
 </div>
 </div>
@@ -572,7 +567,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://onlineplagiarismchecker.net/" rel="nofollow" target="_blank">onlineplagiarismchecker</a></p>
         <p>○&nbsp;<a href="https://copyleaks.com/" rel="nofollow" target="_blank">copyleaks</a></p>
         <p>○&nbsp;<a href="https://1text.com/plagiarismchecker" rel="nofollow" target="_blank">plagiarismchecker</a></p>
->
 <br>
 </div>
 </div>
@@ -621,7 +615,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://ludwig.guru/" rel="nofollow" target="_blank">Ludwig</a><i> - Linguistic search engine and smart translator that helps you find the perfect word or sentence to express your ideas.</i></p>
         <p>○&nbsp;<a href="https://www.scribbr.com/" rel="nofollow" target="_blank">Scribbr</a><i> - Proofreading & Editing Service, Plagiarism Checker, Citation Generator, and extensive Knowledge Base.</i></p>
         <p>○&nbsp;<a href="https://writer.com/" rel="nofollow" target="_blank">Writer</a><i> - AI writing assistant for teams. Craft clear, consistent, and on-brand content everywhere.</i></p>
-    >
 <br>
 </div>
 </div>
@@ -663,7 +656,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
     <p>○&nbsp;<a href="http://www.resoomer.com/" rel="nofollow" target="_blank">Resoomer</a></p>
     <p>○&nbsp;<a href="https://smmry.com/" rel="nofollow" target="_blank">SMMRY</a></p>
     <p>○&nbsp;<a href="https://chrome.google.com/webstore/detail/tldr-chrome/khkpnmmnkenbelkljphmpbjgbmobgonn" rel="nofollow" target="_blank">tl;dr</a></p>
-   >
 <br>
 </div>
 </div>
@@ -706,7 +698,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="http://www.guru.com/" rel="nofollow" target="_blank">Guru</a></p>
         <p>○&nbsp;<a href="http://www.peopleperhour.com/" rel="nofollow" target="_blank">Peopleperhour</a></p>
         <p>○&nbsp;<a href="http://www.freelanced.com/" rel="nofollow" target="_blank">Freelanced</a></p>
-        <p>○&nbsp;<a href="http://www.ifreelance.com/" rel="nofollow" target="_blank">iFreelance</a></p>>
+        <p>○&nbsp;<a href="http://www.ifreelance.com/" rel="nofollow" target="_blank">iFreelance</a></p>
 <br>
 </div>
 </div>
@@ -765,7 +757,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://www.cvmaker.com/" rel="nofollow" target="_blank">Cvmaker</a><i> - Create a professional Resume - quick & eas.</i></p>
         <p>○&nbsp;<a href="https://resume-nation.github.io/" rel="nofollow" target="_blank">resume-nation</a><i> - A resume generator progressive web app</i></p>
         <p>○&nbsp;<a href="https://www.kickresume.com/en/help-center/resume-samples/" rel="nofollow" target="_blank">resume-samples</a><i> - Browse 1,579 resume examples for any profession. </i></p>
-  >
 <br>
 </div>
 </div>
@@ -804,7 +795,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div id="wb_Text9"         <p>○&nbsp;<a href="https://piktochart.com/" rel="nofollow" target="_blank">Piktochart</a> - <em>Presentation Designer, choose a template and fill it with contents.</em></p>
         <p>○&nbsp;<a href="https://templatelab.com/" rel="nofollow" target="_blank">TemplateLab</a> - <em>Free Business & Educational templates.</em></p>
         <p>○&nbsp;<a href="https://www.vertex42.com/" rel="nofollow" target="_blank">Vertex</a> - <em>Free Word and Excel templates</em></p>
- >
 <br>
 </div>
 </div>
@@ -853,7 +843,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://jumpstick.app/" rel="nofollow" target="_blank">JumpStick</a><i> - Explore & Discover the Internet</i></p>
         <p>○&nbsp;<a href="https://openbulkurl.com/random/" rel="nofollow" target="_blank">OpenBulkURL</a><i> -  Cool features that you would not find anywhere else.</i></p>
         <p>○&nbsp;<a href="https://dailyfunchallenge.com/" rel="nofollow" target="_blank">DailyFunChallenge</a><i> -  Get your dose of inspiration.</i></p>
- >
 <br>
 </div>
 </div>
@@ -911,7 +900,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://digitalarchive.wilsoncenter.org/collections" rel="nofollow" target="_blank">Digital Archive</a> - <em>Historical Documents</em><br /></p>
         <p>○&nbsp;<a href="https://archives.gov/" rel="nofollow" target="_blank">Archives.gov</a> - <em>US Historical Documents</em></p>
         <p>○&nbsp;<a href="https://drive.google.com/drive/u/0/mobile/folders/10rKtVNd18i30mrXwIjFnMMPUBveKNdOO?usp=sharing" rel="nofollow" target="_blank">History Newsboys of 1899</a> - <em>Books / Documents</em></p>
-   >
 <br>
 </div>
 </div>
@@ -971,7 +959,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://www.mathsisfun.com/" rel="nofollow" target="_blank">Math is Fun</a> - <em>Math Tutorials / Puzzles / Games</em></p>
         <p>○&nbsp;<a href="https://projecteuler.net/" rel="nofollow" target="_blank">Project Euler</a> - <em>Math / Programming Problems</em></p>
         <p>○&nbsp;<a href="http://divisorplot.com/" rel="nofollow" target="_blank">Divisor Plot</a> - <em>Composite Number Pattern Visualization</em></p>
-   >
 <br>
 </div>
 </div>
@@ -1052,7 +1039,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://freemdict.com/" rel="nofollow" target="_blank">FreeMdict</a> - <em>Dictionary Downloads / <a href="https://forum.freemdict.com/" rel="nofollow">Forum</a> / <a href="https://downloads.freemdict.com/" rel="nofollow" target="_blank">Archive</a></em> </p>
         <p>○&nbsp;<a href="https://www.pdawiki.com/forum/" rel="nofollow" target="_blank">pdawiki</a> - <em>Dictionary Downloads / Use WeChat for invite</em> </p>
         <p>○&nbsp;<a href="http://www.goldendict.org/" rel="nofollow" target="_blank">Goldendict</a> - <em>Dictionary Program</em></p>
- >
 <br>
 </div>
 </div>
@@ -1171,7 +1157,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://www.p2pu.org/" rel="nofollow" target="_blank">P2PU</a> - <em>Join Learning Groups Using Free Courses</em></p>
         <p>○&nbsp;<a href="https://www.topuniversities.com/" rel="nofollow" target="_blank">Top Universities</a> - <em>University Rankings</em></p>
         <p>○&nbsp;<a href="https://www.ratemyprofessors.com/" rel="nofollow" target="_blank">RateMyProfessor</a> - <em>Professor Ratings</em></p>
- >
 <br>
 </div>
 </div>
@@ -1221,7 +1206,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://documentary.su/" rel="nofollow" target="_blank">Documentary.su</a></p>
         <p>○&nbsp;<a href="https://docuwiki.net/" rel="nofollow" target="_blank">Docuwiki</a> - <em><a href="https://www.emule-project.net/" rel="nofollow" target="_blank">Emule required</a></em></p>
         <p>○&nbsp;<a href="https://open-video.org/" rel="nofollow" target="_blank">Open-Video</a></p>
-   >
 <br>
 </div>
 </div>
@@ -1263,7 +1247,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
             <p>○&nbsp;<a href="https://calishot-eng-1.herokuapp.com/" rel="nofollow" target="_blank">Calishot</a>, <a href="https://calishot-eng-2.herokuapp.com/index-eng/summary" rel="nofollow">2</a>, <a href="https://calishot-eng-3.herokuapp.com/index-eng/summary" rel="nofollow">3</a>, <a href="https://calishot-eng-4.herokuapp.com/index-eng/summary" rel="nofollow">4</a>, <a href="https://calishot-non-eng-3.herokuapp.com/index-non-eng/summary" rel="nofollow">Non-English</a>, <a href="https://calishot-non-eng-4.herokuapp.com/index-non-eng/summary" rel="nofollow">2</a> - <em>Search Calibre Libraries</em></p>
             <p>○&nbsp;<a href="https://github.com/janeczku/calibre-web" rel="nofollow" target="_blank">Calibre-Web</a> - <em>Web App for the Calibre Software</em></p>
             <p>○&nbsp;<a href="https://the-eye.eu/public/Books/Calibre_Libraries/" rel="nofollow" target="_blank">The Eye&#39;s Calibre Libraries</a> - <em>Calibre Libraries</em> </p>
-  >
 <br>
 </div>
 </div>
@@ -1339,7 +1322,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
             <p>○&nbsp;<a href="https://cubari.moe/" rel="nofollow" target="_blank">Cubari</a> - <em>Image Proxy / Reader</em></p>
             <p>○&nbsp;<a href="https://add0n.com/chrome-reader-view.html" rel="nofollow" target="_blank">Reader View</a>, <a href="https://epub.press/" rel="nofollow" target="_blank">EpubPress</a>, <a href="https://mybrowseraddon.com/reader-view.html" rel="nofollow" target="_blank">Reader View</a> or <a href="https://2read.net/" rel="nofollow" target="_blank">2read</a> - <em>Open Pages in Reader View</em></p>
             <p>○&nbsp;<a href="https://telegram.me/to_kindle_bot" rel="nofollow" target="_blank">Ebook Sender</a> - <em>Send Ebooks to Kindle</em></p>
-       >
 <br>
 </div>
 </div>
@@ -1411,7 +1393,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
                 <a href="https://play.typeracer.com/" rel="nofollow" target="_blank">Typeracer</a>,
                 <a href="https://zty.pe/" rel="nofollow" target="_blank">ZType</a>,
                 <a href="https://www.nitrotype.com/"  rel="nofollow" target="_blank">NitroType</a>,
-                <a href="https://keyma.sh/" rel="nofollow" target="_blank">Keyma.sh</a>.>
+                <a href="https://keyma.sh/" rel="nofollow" target="_blank">Keyma.sh</a>.
 <br>
 </div>
 </div>
@@ -1452,7 +1434,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://archeologie.culture.fr/chauvet/en/explore-cave/" rel="nofollow" target="_blank">Chauvet Cave</a> - <em>Chauvet-Pont-d&#39;Arc Cave Virtual Tour</em> </p>
         <p>○&nbsp;<a href="https://www.haraldjoergens.com/panoramas/spitfire-td314/files/" rel="nofollow" target="_blank">Spitfire Panorama</a> - <em>Spitfire Mark IX Cockpit Interactve Panorama</em> </p>
         <p>○&nbsp;<a href="https://my.matterport.com/show/?m=NeiMEZa9d93" rel="nofollow" target="_blank">Explore Pharaoh Ramesses VI Tomb</a> - <em>Pharaoh Ramesses VI Tomb Virtual Tour</em></p>
-   >
 <br>
 </div>
 </div>
@@ -1500,7 +1481,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://greasyfork.org/en/scripts/35521-bypass-paywalls-for-scientific-documents" rel="nofollow" target="_blank">Bypass Scientific Document Paywalls</a></p>
         <p>○&nbsp;<a href="https://unpaywall.org/" rel="nofollow" target="_blank">Bypass Scholarly Article Paywalls</a></p>
         <p>○&nbsp;<a href="https://github.com/manojVivek/medium-unlimited" rel="nofollow" target="_blank">Medium Unlimited</a> or <a href="https://scribe.rip/" rel="nofollow" target="_blank">Scribe</a></p>
- >
 <br>
 </div>
 </div>
@@ -1552,7 +1532,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
             <p>○&nbsp;<a href="https://www.europeana.eu/en/collections/topic/18-newspapers" rel="nofollow" target="_blank">Europeana Newspapers</a> - <em>European Historical Newspapers</em></p>
             <p>○&nbsp;<a href="https://github.com/king-millez/abc-dl" rel="nofollow" target="_blank">abc-dl</a> - <em>Australian Broadcasting Corporation News Archive</em></p>
             <p>○&nbsp;<a href="https://newspapermap.com/" rel="nofollow" target="_blank">Newspaper Map</a> - <em>Find / Translate Worldwide Newspapers</em></p>
-   >
 <br>
 </div>
 </div>
@@ -1651,7 +1630,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
             <p>○&nbsp;<a href="https://docdownloader.com/" rel="nofollow" target="_blank">DocDownloader</a> - <em><a href="https://www.scribd.com/" rel="nofollow" target="_blank">Scribd</a> Document Downloader</em> </p>
             <p>○&nbsp;<a href="https://zealdocs.org/" rel="nofollow" target="_blank">ZealDocs</a> - <em>Documentation Reader</em></p>
             <p>○&nbsp;<a href="https://github.com/kermitt2/grobid" rel="nofollow" target="_blank">GROBID</a> - <em>Extract / Organize Scientific Document Info</em></p>
-       >
 <br>
 </div>
 </div>
@@ -1704,7 +1682,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="http://70.88.180.169:8088/" rel="nofollow" target="_blank">http://70.88.180.169:8088/</a></p>
         <p>○&nbsp;<a href="http://159.89.158.226:8080/" rel="nofollow" target="_blank">http://159.89.158.226:8080/</a></p>
         <p>○&nbsp;<a href="http://68.109.128.155:8080/" rel="nofollow" target="_blank">http://68.109.128.155:8080/</a></p>
-        <p>○&nbsp;<a href="http://207.237.122.161:8080/" rel="nofollow" target="_blank">http://207.237.122.161:8080/</a></p>>
+        <p>○&nbsp;<a href="http://207.237.122.161:8080/" rel="nofollow" target="_blank">http://207.237.122.161:8080/</a></p>
 <br>
 </div>
 </div>
@@ -1750,7 +1728,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <a href="https://jojocoupons.com/" rel="nofollow" target="_blank">JoJoCoupons</a>, 
         <a href="https://udemycoupon.learnviral.com/" rel="nofollow" target="_blank">Learn Viral</a>, 
         <a href="https://nocourses.com/" rel="nofollow" target="_blank">nocourses</a>, 
-        <a href="https://baronip-coupons.blogspot.com/" rel="nofollow" target="_blank">BARONIP COUPONS</a>>
+        <a href="https://baronip-coupons.blogspot.com/" rel="nofollow" target="_blank">BARONIP COUPONS</a>
 <br>
 </div>
 </div>
@@ -1792,7 +1770,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <a href="http://www.cut-the-knot.org/" rel="nofollow" target="_blank">Cut The Knot</a>,
         <a href="https://mathlets.org/" rel="nofollow" target="_blank">Mathlets</a>,
         <a href="https://www.geogebra.org/" rel="nofollow" target="_blank">GeoGebra</a>.
-    </p>>
+    </p>
 <br>
 </div>
 </div>
@@ -1835,7 +1813,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <a href="https://www.calculatorsoup.com/" rel="nofollow" target="_blank">CalculatorSoup</a>, 
         <a href="https://quickmath.com/" rel="nofollow" target="_blank">QuickMath</a>, 
         <a href="https://www.numberempire.com/" rel="nofollow" target="_blank">NumberEmpire</a>
-    </p>>
+    </p>
 <br>
 </div>
 </div>
@@ -1928,7 +1906,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
                 <a href="https://github.com/3raxton/spicetify-custom-apps-and-extensions" rel="nofollow" target="_blank">Addons</a> /
                 <a href="https://discord.gg/VnevqPp2Rr" rel="nofollow" target="_blank">Discord</a> /
                 <a href="https://github.com/OhItsTom/spicetify-easyinstall/" rel="nofollow" target="_blank">Easy Install</a>,
-                <a href="https://github.com/williamckha/spicetify-fluent" rel="nofollow" target="_blank">Fluent</a></p>>
+                <a href="https://github.com/williamckha/spicetify-fluent" rel="nofollow" target="_blank">Fluent</a></p>
 <br>
 </div>
 </div>
